2006-02-17  Johnny Jacob  <johnnyjacob@gmail.com>

	Fixes #312423, #329749
	* gui/dialogs/event-page.c: (sensitize_widgets): Enable/Disable
	based on read_only status.
	(alarm_store_changed_cb): Added. Changed signal handler for alarm list.
	* gui/dialogs/alamm-list-dialog.c: (edit_clicked_cb): Emit changed 
	signal for alarm list.

2006-02-28  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #332726
	* gui/dialogs/recur-comp.c: (recur_component_dialog): Dont
	remove the recurrence id, the backend would remove it.							     

2006-02-23  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #330677
	* gui/itip-utils.c: 
	(comp_content_type): Removed the content setting as text/plain.
	(itip_send_comp): Changed the reply all to FALSE.
	(reply_to_calendar_comp): Set the content type as text/plain.

2006-02-15  Rajeev ramanathan <rajeevramanathan_2004@yahoo.co.in>

	* gui/dialogs/memo-page.glade: Changed the layout spacing of memo 
	editor.

2006-02-14  Rajeev ramanathan <rajeevramanathan_2004@yahoo.co.in>

	**Fixes #330374

	* gui/tasks-control.c: (tasks_control_complete_cmd): Added code
	to disable Edit->Mark as complete for completed events.

2006-02-14  Rajeev ramanathan <rajeevramanathan_2004@yahoo.co.in>

	**Fixes #326477

	* gui/dialogs/task-page.glade: Changed size of the new task popup 
	window to display Status Details in its default size.

2006-02-14  Rajeev ramanathan <rajeevramanathan_2004@yahoo.co.in>
	
	**Fixes #325935

	* gui/dialogs/task-page.c: (source_changed_cb): Added code to
	enable Save button if group is changed in task editor

2006-02-14  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #330931 #331029
	
	* gui/e-calendar-view.c: (e_calendar_view_get_tooltips):

2006-02-13  Harish Krishnaswamy  <kharish@novell.com>

	* gui/dialogs/task-page.c: (sensitize_widgets):
	sensitize should be initialized to TRUE since it is
	being ANDed to compute sens.
	Fixes #330957 and #330958.
